src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Prohibited_Business_Type__c</fullName>
        <label>Prohibited Business Type</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Adult Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airlines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual memberships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antique/Collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appliance Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appraisal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction Houses (1/1/09)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automobile Dealerships New/Used  (1/1/09)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bail Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Ticket (i.e. Apartment)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billiards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bit Tick Retail (i.e. electronic, audio equipment)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boating/Marina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Merchant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casinos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Credit Counseling Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruise Ships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Care Services  (1/1/09)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Tours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct/Multi Level Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Bay Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment (i.e. night clubs, comedy clubs, dinner theatre)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Planning  (1/1/09)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firearms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flea Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flooring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture Indoor/Outdoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furriers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Funds__c</fullName>
        <label>Intended Use of Cash</label>
        <picklist>
            <picklistValues>
                <fullName>Buyout a partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction/Renovation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency working capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing expense, promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open a new location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay off a tax lien</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay off debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase new equipment, inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal - surplus cash for off-season</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qual_flag__c</fullName>
        <formula>IF( OR( ISPICKVAL( Operating_Since__c , &quot;Less than 1 year&quot;), ISPICKVAL( Operating_Since__c , &quot;Less then 6 months&quot;), ISPICKVAL( Monthly_Visa_Mastercard_Volume__c , &quot;$0 - 2,500&quot;),ISPICKVAL( Monthly_Visa_Mastercard_Volume__c , &quot;Does Not Accept Visa/MC&quot;) ) , 0, 1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qual flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualified_Interested_Contact__c</fullName>
        <formula>IF((ISPICKVAL(Status,&quot;In Progress - Follow Up Call Needed&quot;) || ISPICKVAL(Status,&quot;In Progress - Awaiting Statements&quot;) || ISPICKVAL(Status,&quot;In Progress - Pending Approval&quot;) || ISPICKVAL(Status,&quot;In Progress - Pending Quote&quot;) || ISPICKVAL(Status,&quot;Converted&quot;)),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Interested Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quancor_HOT_LEAD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quancor HOT LEAD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Amount__c</fullName>
        <label>Quote Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RBS_Round_Robin__c</fullName>
        <formula>MOD(VALUE(Lead_Number__c) ,2) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RBS Round Robin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RC_Had_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From Rock Connections: This checkbox field will be marked as “true” if the specialist’s call with the client is greater than 1 minute.</description>
        <label>Rock Connections - Had Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RC_Had_Conversation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From Rock Connections: This checkbox field will be marked as “true” if the specialist’s call with the client is greater than 4.5 minutes.</description>
        <label>Rock Connections - Had Conversation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RC_Lead_Type__c</fullName>
        <label>RC Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>RAFRESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAPQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAFC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RADM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAQS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAFF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RABC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RATV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAPPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RALEND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RADM2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCRAAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAFREXP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAFRESHQS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAFRESHAGED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RACK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RALT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RC_Status__c</fullName>
        <description>External status as reported from Rock Connections</description>
        <label>RC Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attempted to Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sleeping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pitched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converted to Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transferred to 3rd party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signature Received - Scheduled Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile Call Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile Statements Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folder Documents Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signature Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folder Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calling - No Contact Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Call Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact - Pending Profile Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Bank Card Statements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Folder Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Signature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folder Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RC_Tracking_ID__c</fullName>
        <externalId>true</externalId>
        <label>RC Tracking ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RR_Quancor__c</fullName>
        <formula>MOD(VALUE(Lead_Number__c) ,5) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RR_Quancor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Referral_AE_Owner_ID__c</fullName>
        <description>ID of the AE who owns the Merchant&apos;s most recent opportunity</description>
        <label>Referral AE Owner ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_AE_Owner_Name__c</fullName>
        <label>Referral AE Owner Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Merchant_ID__c</fullName>
        <label>Referral Merchant ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Merchant_Name__c</fullName>
        <label>Referral Merchant Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_URL__c</fullName>
        <label>Referring URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Register_This_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Register This Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_To_Sender_Reason__c</fullName>
        <label>Return To Sender Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rock_Connections_Transfer_Recipient__c</fullName>
        <label>Rock Connections Transfer Recipient</label>
        <picklist>
            <picklistValues>
                <fullName>Alejandra Sims</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brendan McBride</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brent Elliott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carolina Chiedi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cayce Prunesti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chanda Moorman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charles Wagner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christopher Conway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courtney Dorsey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devin Delany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Janak Pancholi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeff Hageman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joseph LaFalcia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juan Yanez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maria Rivera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marilyn Nunez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marlow Santos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matthew Dillingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mauricio Safi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peter Havenstein</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robert Kim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryan Dearborn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tim Iuculano</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Barrata__c</fullName>
        <description>For Barrata assignment</description>
        <formula>MOD(VALUE(Lead_Number__c) ,6) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin Barrata</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Round_Robin_ID_2__c</fullName>
        <formula>MOD(VALUE(Lead_Number__c),12)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round_Robin_ID_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Round_Robin_ID_3__c</fullName>
        <description>For RBS web Lead assignment</description>
        <formula>MOD(VALUE(Lead_Number__c) ,2) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Round_Robin_ID__c</fullName>
        <description>Use the value of this formula field in your lead assignment rules to assign lead records to different queues or users</description>
        <formula>MOD(VALUE(Lead_Number__c) ,5) +1</formula>
        <label>Round_Robin_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIC_Codes__c</fullName>
        <label>SIC Codes</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWIFT_Follow_up_Campaign__c</fullName>
        <label>SWIFT Follow up Campaign</label>
        <picklist>
            <picklistValues>
                <fullName>Distributed 6-25-2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SWIFT_Priority_Code__c</fullName>
        <externalId>true</externalId>
        <label>SWIFT Priority Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWIFT_Product_Code__c</fullName>
        <label>SWIFT Product Code</label>
        <picklist>
            <picklistValues>
                <fullName>GFSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WSFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZMB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SWIFT_Response_Date__c</fullName>
        <label>SWIFT Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Agent_ID__c</fullName>
        <label>Sales Agent ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Agent_Name__c</fullName>
        <label>Sales Agent Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Search_Engine__c</fullName>
        <formula>IF(
begins( Tracking_Code__c , &quot;BIZ&quot;),&quot;BIZ&quot;,IF(
begins(Tracking_Code__c  , &quot;cGGL&quot;),&quot;cGGL&quot;,IF(
begins(Tracking_Code__c  , &quot;GGL&quot;),&quot;GGL&quot;,IF(
begins(Tracking_Code__c , &quot;cYHO&quot;),&quot;cYHO&quot;,IF(  
begins(Tracking_Code__c , &quot;YHO&quot;),&quot;YHO&quot;,IF(
begins(Tracking_Code__c , &quot;MSN&quot;),&quot;MSN&quot;,IF(  
begins(Tracking_Code__c , &quot;cMSN&quot;),&quot;cMSN&quot;,IF(  
begins(Tracking_Code__c  , &quot;SSPYHO&quot;),&quot;SSPYHO&quot;,IF(  
begins(Tracking_Code__c , &quot;adknowledge&quot;),&quot;Adknowledge&quot;,IF(
begins(Tracking_Code__c,  &quot;arDirM&quot;),&quot;DirectM-ar&quot;,IF(
begins(Tracking_Code__c  , &quot;Linkshare&quot;),&quot;Linkshare&quot;,IF(
begins(Tracking_Code__c ,&quot;VD&quot;),&quot;Venture-Direct&quot;,IF(
begins(Tracking_Code__c  , &quot;adDirM&quot;),&quot;DirectM-ad&quot;,IF(
begins(Tracking_Code__c , &quot;SpanGGL&quot;),&quot;SpanGGL&quot;,if(
CONTAINS(Campaign_Name_Upload__c, &quot;Venture&quot;),&quot;Venture-Direct&quot;,&quot;NA&quot;) ))))))))))))))</formula>
        <label>Search Engine</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Match_Type__c</fullName>
        <label>Search Match Type</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Category__c</fullName>
        <label>Service Category</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <label>Principal 1 Social Security</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_of_incorporation__c</fullName>
        <label>State of incorporation?</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_Received_Flag__c</fullName>
        <formula>IF( ISNULL(  Statements_Received__c ) , 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statement Received Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Statements_Received__c</fullName>
        <description>Date stamp when you receive the initial statements to bid the advance.</description>
        <label>Statements Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subscribed_to_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, merchant subscribes to RapidResource Newsletter.</description>
        <label>Subscribed to Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D.D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J.D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Swift_State_Restrictions__c</fullName>
        <formula>if( Len(State)=0 ,&quot;Please ask for State before sending the Addendum&quot;,if(contains(&quot;AR,CT,CO,DC,DE,FL,GA,MA,MI,MT,NJ,NY,OK,OH,PA,RI,TN,Arizona, Connecticut,Colorado, Washington DC, District of Columbia, Delaware, Florida, Georgia, Massachusetts, Michigan, Montana, New Jersey, New York, Oklahoma, Ohio, Pennsylvania, Rhode Island, Tennessee&quot;,  State  ),&quot;Send Only Low Cost Addendum &quot;,&quot;Send Low Cost Addendum with repayment term&quot;))</formula>
        <label>Swift State Restrictions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_with_RC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a hidden field (a flag) required to trigger the sync between Rapid Advance and Rock Connections through S2S connection.</description>
        <label>Sync with RC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Syndication_Amount__c</fullName>
        <label>Syndication Amount:</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEST_Lead_Owner_Text__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TEST Lead Owner (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TM_Cost__c</fullName>
        <formula>if(CONTAINS( Mkt_Channels__c,&quot;Quancor&quot;),if(CONTAINS(Mkt_Month__c , &quot;3/2008&quot;), 143,if(CONTAINS(Mkt_Month__c , &quot;4/2008&quot;),67,if(CONTAINS(Mkt_Month__c , &quot;5/2008&quot;),77.02,if(CONTAINS(Mkt_Month__c , &quot;6/2008&quot;),0,if(CONTAINS(Mkt_Month__c , &quot;7/2008&quot;),0,0))))),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TM Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Temp_Marketing_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Temp Marketing Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_with_current_processor_Year_Months__c</fullName>
        <label>Time with current processor? Year/Months</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Profits__c</fullName>
        <label>Total Profits</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Code__c</fullName>
        <label>Tracking Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transferred_By__c</fullName>
        <label>Transferred By:</label>
        <picklist>
            <picklistValues>
                <fullName>Brian Hernandez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dwayne McCoy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steven McGee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transferred_Date_Time__c</fullName>
        <label>Transferred Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type_Of_Business__c</fullName>
        <label>Type Of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Appliance Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Supply Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bakery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar/Tavern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty/Nail/Spa Salon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bicycle Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camera Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candy Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carwash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caterer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell Phone Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiropractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cigar Cigarette &amp; Tobacco Dealer-Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer and Software Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consignment/Second Hand Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dentist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug and Vitamin Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drycleaner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics/TV and Radio Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Covering Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Framing Store</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Funding_Preferred__c</fullName>
        <label>Type of Funding Preferred</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unqualified_Count__c</fullName>
        <formula>if(OR( ISPICKVAL( Status , &quot;Unqualified Less then $2,500 V/MC&quot;),ISPICKVAL( Status , &quot;Unqualified - Less than 6 months&quot;),ISPICKVAL( Status , &quot;Unqualified - Start Up Business&quot;),ISPICKVAL( Status , &quot;Unqualified - Internet Only Business&quot;),ISPICKVAL( Status , &quot;Unqualified - Other&quot;),ISPICKVAL( Status , &quot;Does not accept Visa/Mastercard&quot;),ISPICKVAL( Status , &quot;DUPLICATE LEAD&quot;),ISPICKVAL( Status , &quot;Prohibited Business Type&quot;),ISPICKVAL( Status , &quot;Home Based Business&quot;),ISPICKVAL( Status , &quot;Not Enough Monthly Transactions&quot;),ISPICKVAL( Status , &quot;Not the Owner&quot;),ISPICKVAL( Status , &quot;Existing Customer&quot;),ISPICKVAL( Status , &quot;Incomplete contact/company information&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unqualified Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>